--- a/style.css
+++ b/style.css
@@ -15,18 +15,20 @@ body {
   background: url('images/background.jpg');
   background-size: cover;
   background-position: center;
+  overflow: hidden;
 }
 
 .container {
   position: relative;
   width: 440px;
-  height: 555px;
+  height: 100px;
   background: rgba(255, 255, 255, .1);
   backdrop-filter: blur(30px);
   border: 2px solid rgba(255, 255, 255, .2);
   border-radius: 16px;
   padding: 20px;
   color: #fff;
+  transition: height .6s ease;
 }
 
 .search-box {
@@ -85,6 +87,46 @@ body {
   margin: 40px 0;
 }
 
+.weather-box, 
+.weather-details,
+.not-found {
+  overflow: hidden;
+  visibility: hidden;
+}
+
+
+.weather-box.active, 
+.weather-details.active,
+.not-found.active {
+  visibility: visible;
+}
+
+.weather-box .box,
+.not-found .box {
+  transform: translateY(-100%);
+}
+
+.weather-box.active .box,
+.not-found .box {
+  transform: translateY(0%);
+  transition: transform 1s ease;
+  transition-delay: .6s;
+}
+
+.weather-box .box .info-weather {
+  transform: translateY(-120%);
+}
+
+
+.container.active .weather-box .box .info-weather ,
+.container.active .weather-details .humidity .info-humidity,
+.container.active .weather-details .wind .info-wind {
+
+  transform: translateY(0%);
+  transition: transform 1s ease;
+
+}
+
 .weather-box img {
   width: 60%;
 }
@@ -123,6 +165,24 @@ body {
   display: flex;
   align-items: center;
   width: 50%;
+  transform: translateY(-100%);
+}
+
+
+.weather-details.active .humidity,
+.weather-details.active .wind{
+
+  transform: translateY(0%);
+  transition: transform 1s ease;
+  transition-delay: 1.2s;
+
+}
+
+
+.weather-details.active .humidity .info-humidity,
+.weather-details.active .wind .info-wind {
+  transform: translateY(-100%);
+  overflow: hidden;
 }
 
 .weather-details .humidity{
@@ -150,4 +210,60 @@ body {
 .weather-details p {
   font-size: 14px;
   font-weight: 500;
+}
+
+.not-found {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  margin-top: 110px;
+}
+
+.not-found img {
+  width: 65%;
+}
+
+.not-found p {
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 12px;
+}
+
+.city-hide {
+  display: none;
+}
+
+#clone-info-weather,
+#clone-info-humidity,
+#clone-info-wind {
+  position: absolute;
+  transform: translateY(-100%);
+}
+
+#clone-info-weather .weather {
+  transform: translateY(120%);
+  transition: transform 1s ease, opacity 0s;
+  transition-delay: 0s, 2s;
+}
+
+.weather-box:not(.active) #clone-info-weather .weather {
+  opacity: 0;
+  transition-delay: 0s;
+}
+
+.active-clone#clone-info-weather .weather {
+  transform: translateY(0%);
+}
+
+#clone-info-humidity span,
+#clone-info-wind span {
+  transform: translateY(100%);
+  transition: transform 1s ease;
+}
+
+.active-clone#clone-info-humidity span,
+.active-clone#clone-info-wind span {
+    transform: translateY(0%);
 }
